fix: add search functionality for clubs, students, programs, and staff to enhance user experience

--- a/iframe-content/kid-list.html
+++ b/iframe-content/kid-list.html
@@ -29,9 +29,10 @@
    <div class="side-menu">
         <button onclick="$(`#create-transaction`).fadeIn()">Додати оплату</button>
     </div>
-    <div id="students-list" class="item-list">
-        <br>
+    <div class="filter-menu">
         <input type="text" id="student-search" placeholder="Пошук учня...">
+    </div>
+    <div id="students-list" class="item-list">
         <div class="loader"></div>
         <div class="request-error">Сталася помилка, спробуйте пізніше.</div>
     </div>
