--- a/iframe-content/program-list.html
+++ b/iframe-content/program-list.html
@@ -89,9 +89,9 @@
         </div>
     </div>
     <br>
+    <div class="filter-menu">
+        <input type="text" id="program-search" placeholder="Пошук програми...">
     <div id="programs-list" class="item-list">
-        <br>
-        <input type="text" id="program-search" placeholder="Пошук учня...">
     </div>
 
     <div class="modal hidden" id="add-entity-modal">
