--- a/iframe-content/group-list.html
+++ b/iframe-content/group-list.html
@@ -98,9 +98,10 @@
         </div>
     </div>
     <br>
+    <div class="filter-menu">
+        <input type="text" id="club-search" placeholder="Пошук гуртка...">
+    </div>
     <div id="clubs-list" class="item-list">
-        <br>
-        <input type="text" id="club-search" placeholder="Пошук учня...">
     </div>
 
     <div class="modal hidden" id="add-entity-modal">
