--- a/iframe-content/group-list.html
+++ b/iframe-content/group-list.html
@@ -101,7 +101,7 @@
     <div class="filter-menu">
         <input type="text" id="club-search" placeholder="Пошук гуртка...">
     </div>
-    <div id="clubs-list" class="item-list">
+    <div id="club-list" class="item-list">
     </div>
 
     <div class="modal hidden" id="add-entity-modal">
