--- a/iframe-content/group-list.html
+++ b/iframe-content/group-list.html
@@ -17,7 +17,7 @@
                 method: 'get',
                 dataType: 'json',
                 success:(data)=>{
-                    let container = $("#clubs-list");
+                    let container = $("#club-list");
                     let addContainer
                     data.forEach(group => {
                         container.append(`
@@ -31,28 +31,29 @@
                     });
                 }
             })
-                $("#add-entity-modal-button").click(()=>{
-                    $(".wrapper").css("visibility", "hidden");
-                    $('#add-entity-modal').fadeIn();
-                    $.ajax({
-                        url: "https://school-f6vi.onrender.com/staff",
-                        method: 'get',
-                        dataType: 'json',
-                        success:(data)=>{
-                            let select = $("#add-club-leader");
-                            data.forEach(teacher => {
-                                select.append(`<option value="${teacher.id}">${teacher.name}</option>`);
-                            });
-                            $(".wrapper").css("visibility", "visible");
-                            $("#add-entity-modal-loader").hide();
-                            $("#add-entity-modal-error").hide();
-                        },
-                        error:()=>{
-                            $("#add-entity-modal-loader").hide();
-                            $("#add-entity-modal-error").show();
-                        }
-                    })
+
+            $("#add-entity-modal-button").click(()=>{
+                $(".wrapper").css("visibility", "hidden");
+                $('#add-entity-modal').fadeIn();
+                $.ajax({
+                    url: "https://school-f6vi.onrender.com/staff",
+                    method: 'get',
+                    dataType: 'json',
+                    success:(data)=>{
+                        let select = $("#add-club-leader");
+                        data.forEach(teacher => {
+                            select.append(`<option value="${teacher.id}">${teacher.name}</option>`);
+                        });
+                        $(".wrapper").css("visibility", "visible");
+                        $("#add-entity-modal-loader").hide();
+                        $("#add-entity-modal-error").hide();
+                    },
+                    error:()=>{
+                        $("#add-entity-modal-loader").hide();
+                        $("#add-entity-modal-error").show();
+                    }
                 })
+            })
             
             $("#add-entity-button").click(()=>{
                 let club = {
