--- a/iframe-content/schedule.html
+++ b/iframe-content/schedule.html
@@ -1016,6 +1016,72 @@
         let selectedTeacher = $(this).val();
         loadScheduleByTeacher(selectedTeacher);
       });
+
+      function loadScheduleByClass(classNumber){
+        $('#schedule-by-class tbody').each(function() {
+          $(this).empty();
+        });
+        $.getJSON('https://school-f6vi.onrender.com/view/schedule/class=' + classNumber, (data)=> {
+          let lessons = [1, 2, 3, 4, 5, 6, 7, 8];
+          let days = [1, 2, 3, 4, 5];
+          scheduleData = data;
+
+          for(let i=1; i<9; i++){
+            const lessonSchedule = data.filter((lesson)=> lesson.lessonNumber == i);
+            const tr = document.createElement("tr");
+            const td = document.createElement("td");
+            td.innerText = i;
+            tr.appendChild(td);
+            days.forEach((day) => {
+              const lesson = lessonSchedule.find((lesson) => lesson.dayOfWeek == day && lesson.classField == classNumber);
+              const td = document.createElement("td");
+              td.className = "lesson-cell";
+              td.setAttribute("data-lesson-number", i);
+              if(lesson){
+                td.setAttribute("data-lesson", lesson.id);
+                td.setAttribute("data-class", lesson.classField);
+                td.innerHTML = `<span class="subject main-text">${lesson.subjectName}</span> <br><span class="grade small-text">${lesson.teacherName} клас</span>`;
+              }
+              else{
+                td.setAttribute("data-lesson", "");
+                td.innerHTML = `<span class="subject main-text"></span> <br><span class="teacher small-text"></span>`;
+              }
+              td.onclick = function() {
+                const classField = td.getAttribute("data-class");
+                $('#modal-title').text(`Редагування розкладу для ${classField} класу`);
+                $('#subject-select').val(lesson ? lesson.subjectId : "");
+                $('#teacher-select').val(lesson ? lesson.teacherId : "");
+                $('.modal').show();
+                $('#modalSave').off('click').on('click', ()=>{
+                  const subjectId = $('#subject-select').val();
+                  const teacherId = $('#teacher-select').val();
+                  const lessonNumber = td.getAttribute("data-lesson-number");
+                  const lessonId = td.getAttribute("data-lesson");
+                  scheduleData = scheduleData.filter((lesson)=> lesson.id != lessonId);
+                  scheduleData.push({
+                    subject: subjectId,
+                    teacher: teacherId,
+                    classField: classField,
+                    lessonNumber: lessonNumber,
+                    dayOfWeek: day,
+                    from: new Date(),
+                    to: null,
+                  });
+                  let subjectName = subjects.find((subject)=> subject.id == subjectId).name;
+                  let teacherName = teachers.find((teacher)=> teacher.id == teacherId).name;
+                  td.innerHTML = `<span class="subject main-text">${subjectName}</span> <br><span class="teacher small-text">${teacherName}</span>`;
+                  td.setAttribute("data-lesson", lessonId);
+                  td.setAttribute("data-class", classField);
+                  td.setAttribute("data-lesson-number", lessonNumber);
+                  $('.modal').hide();
+                })
+              };
+              tr.appendChild(td);
+            })
+            $('#schedule-by-class-body').append(tr);
+          }
+        });
+      }
       
 
       $('#class-select-for-schedule').change(function() {
