fix: remove unnecessary class suffix from lesson display in schedule

--- a/iframe-content/schedule.html
+++ b/iframe-content/schedule.html
@@ -1039,7 +1039,7 @@
               td.setAttribute("data-lesson-number", i);
               if(lesson){
                 td.setAttribute("data-lesson", lesson.id);
-                td.innerHTML = `<span class="subject main-text">${lesson.subjectName}</span> <br><span class="grade small-text">${lesson.teacherName} клас</span>`;
+                td.innerHTML = `<span class="subject main-text">${lesson.subjectName}</span> <br><span class="grade small-text">${lesson.teacherName}</span>`;
               }
               else{
                 td.setAttribute("data-lesson", "");
