--- a/index.html
+++ b/index.html
@@ -143,12 +143,10 @@
     })
     function changePage(el){
         iframe.src = links[el.hash];
-        $(el).addClass("active");
         liList.forEach(e=>{
-            if(e.id != el.id){
-                e.classList.remove("active");
-            }
+            $(e).removeClass("active");
         })
+        $(el).addClass("active");
     }
 
 
