--- a/iframe-content/student/student-schedule.html
+++ b/iframe-content/student/student-schedule.html
@@ -114,7 +114,7 @@
                 let combinedSchedule = Array(5).fill().map(() => Array(12).fill().map(() => []));
                 let today = new Date().toISOString().split('T')[0]
                 // Спочатку завантажуємо розклад уроків
-                $.getJSON(`https://school-f6vi.onrender.com/view/schedule/day=${today}/kid=${kidId}`, function(lessonData) {
+                $.getJSON(`https://school-f6vi.onrender.com/view/schedule/kid=${kidId}`, function(lessonData) {
                     // Заповнюємо розклад уроками
                     lessonData.forEach(lesson => {
                         const dayIndex = lesson.dayOfWeek - 1; // 1-based to 0-based
