Refactor API endpoints to use localhost for development
- Updated all AJAX requests in the application to point to the local server (http://localhost:8080) instead of the production server (https://school-f6vi.onrender.com).
- This change affects various files including group schedules, staff management, student records, and transaction handling.
- Ensured that all relevant API calls are modified to maintain functionality during local development.

--- a/iframe-content/group-list.html
+++ b/iframe-content/group-list.html
@@ -13,7 +13,7 @@
     <script>
         $(document).ready(function() {
             $.ajax({
-                url: "https://school-f6vi.onrender.com/view/groups-type",
+                url: "http://localhost:8080/view/groups-type",
                 method: 'get',
                 dataType: 'json',
                 success:(data)=>{
@@ -36,7 +36,7 @@
                 $(".wrapper").css("visibility", "hidden");
                 $('#add-entity-modal').fadeIn();
                 $.ajax({
-                    url: "https://school-f6vi.onrender.com/staff",
+                    url: "http://localhost:8080/staff",
                     method: 'get',
                     dataType: 'json',
                     success:(data)=>{
@@ -63,7 +63,7 @@
                     leader: $("#add-club-leader").val()
                 }
                 $.ajax({
-                    url: "https://school-f6vi.onrender.com/groups-type",
+                    url: "http://localhost:8080/groups-type",
                     method: 'post',
                     contentType: 'application/json',
                     data: JSON.stringify(club),
