--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             let username = $("#login").val();
             let password = $("#password").val();
             $.ajax({
-            url: 'https://school-f6vi.onrender.com/auth/login',
+            url: 'http://localhost:8080/auth/login',
             type: 'POST',
             contentType: 'application/json',
             data: JSON.stringify({ username: username, password: password }),
