--- a/iframe-content/groups/group-schedule.html
+++ b/iframe-content/groups/group-schedule.html
@@ -86,7 +86,7 @@
      let groupId = new URLSearchParams(window.location.search).get('id');
 
     // Завантаження розкладу гуртка
-    $.getJSON(`https://school-f6vi.onrender.com/groups-schedule/${groupId}`, function(data) {
+    $.getJSON(`http://localhost:8080/groups-schedule/${groupId}`, function(data) {
       const dayNames = ["Понеділок", "Вівторок", "Середа", "Четвер", "П'ятниця"];
 
       data.forEach(item => {
@@ -126,7 +126,7 @@
             };
 
             $.ajax({
-                url: `https://school-f6vi.onrender.com/groups-schedule/${id}`,
+                url: `http://localhost:8080/groups-schedule/${id}`,
                 type: 'PUT',
                 contentType: 'application/json',
                 data: JSON.stringify(updatedSchedule),
@@ -149,7 +149,7 @@
         $('#confirmDelete').on('click', function () {
           const reason = $('#deleteReason').val().trim();
           $.ajax({
-            url: `https://school-f6vi.onrender.com/groups-schedule/${id}`,
+            url: `http://localhost:8080/groups-schedule/${id}`,
             type: 'DELETE',
             success: function () {
              location.reload();
@@ -173,7 +173,7 @@
         };
 
         $.ajax({
-          url: `https://school-f6vi.onrender.com/groups-schedule`,
+          url: `http://localhost:8080/groups-schedule`,
           type: 'POST',
           contentType: 'application/json',
           data: JSON.stringify(newSchedule),
