--- a/iframe-content/program-list.html
+++ b/iframe-content/program-list.html
@@ -13,7 +13,7 @@
     <script>
         $(document).ready(function() {
             $.ajax({
-                url: "https://school-f6vi.onrender.com/programs-type",
+                url: "http://localhost:8080/programs-type",
                 method: 'get',
                 dataType: 'json',
                 success:(data)=>{
@@ -41,7 +41,7 @@
                     info: $("#add-program-info").val()
                 }
                 $.ajax({
-                    url: "https://school-f6vi.onrender.com/programs-type",
+                    url: "http://localhost:8080/programs-type",
                     method: 'post',
                     dataType: 'json',
                     contentType: 'application/json',
@@ -58,7 +58,7 @@
                         from: new Date().toISOString()
                     }
                     $.ajax({
-                        url: `https://school-f6vi.onrender.com/programs-price`,
+                        url: `http://localhost:8080/programs-price`,
                         method: 'post',
                         dataType: 'json',
                         contentType: 'application/json',
