--- a/iframe-content/programs/program.html
+++ b/iframe-content/programs/program.html
@@ -84,7 +84,7 @@
                 $("#edit-program-modal").fadeIn();
             });
 
-            $.getJSON(`https://school-f6vi.onrender.com/view/programs-type/${programId}`, (data)=>{
+            $.getJSON(`http://localhost:8080/view/programs-type/${programId}`, (data)=>{
                 $("#program-name").text(data.name);
                 $("#program-price").text(data.price);
                 $("#program-info").text(data.info);
@@ -102,7 +102,7 @@
             });
 
             $("#open-history").click(()=>{
-                $.getJSON(`https://school-f6vi.onrender.com/programs-price/history/${programId}`, (data)=>{
+                $.getJSON(`http://localhost:8080/programs-price/history/${programId}`, (data)=>{
                     let table = $("#price-history table");
                     table.find("tr:gt(0)").remove();
                     data.forEach(price=>{
@@ -134,14 +134,14 @@
                 }
                 
                 $.ajax({
-                    url: `https://school-f6vi.onrender.com/programs-type/${programId}`,
+                    url: `http://localhost:8080/programs-type/${programId}`,
                     method: 'put',
                     contentType: 'application/json',
                     data: JSON.stringify(program),
                     success:()=>{
                         if(oldPrice != price.price){
                             $.ajax({
-                            url: `https://school-f6vi.onrender.com/programs-price/${priceId}`,
+                            url: `http://localhost:8080/programs-price/${priceId}`,
                             method: 'put',
                             contentType: 'application/json',
                             data: JSON.stringify(price),
@@ -158,7 +158,7 @@
             });
             $("#delete-entity").click(()=>{
                 $.ajax({
-                    url: `https://school-f6vi.onrender.com/programs-type/${programId}`,
+                    url: `http://localhost:8080/programs-type/${programId}`,
                     method: 'delete',
                     success:()=>{
                         window.location.href = "https://yehormovchan.github.io/iframe-content/program-list.html";
