--- a/iframe-content/student/transactions.html
+++ b/iframe-content/student/transactions.html
@@ -25,7 +25,7 @@
                 let toDate = $("#to-date").val();
                 let transactionType = $("#transaction-type").val();
                 
-                $.getJSON(`https://school-f6vi.onrender.com/view/transaction/${kidId}`, function(data) {
+                $.getJSON(`http://localhost:8080/view/transaction/${kidId}`, function(data) {
                     $(".request-error").hide()
                     let filteredData = data.filter(transaction => {
                         let date = new Date(transaction.date);
@@ -40,7 +40,7 @@
                 }).fail(()=>{
                     $(".request-error").show();
                 });;
-                $.getJSON(`https://school-f6vi.onrender.com/transaction/sum/${kidId}`, function(data) {
+                $.getJSON(`http://localhost:8080/transaction/sum/${kidId}`, function(data) {
                     let totalSum = data;
                     $("#total-sum").text(`Баланс: ${totalSum} грн`);
                     if(totalSum >= 0) {
@@ -56,7 +56,7 @@
             }
 
             function loadTransactionTypes() {
-                $.getJSON("https://school-f6vi.onrender.com/transactions-type", function(types) {
+                $.getJSON("http://localhost:8080/transactions-type", function(types) {
                     $(".request-error").hide()
                     let select = $("#transaction-type");
                     select.append('<option value="">Усі</option>');
