fix: correct selector for hiding attendance block in kid information

--- a/iframe-content/student/kid.html
+++ b/iframe-content/student/kid.html
@@ -51,7 +51,7 @@
                         $("birth-certificate").removeClass("clickable");
                     }
                     if(!kid.schoolIncluded){
-                        $("attendance-on-lesson-block").hide();
+                        $("#attendance-on-lesson-block").hide();
                     }
                 }, 
                 (xhr)=>{
